# AI_Homework

./: CMakeLists.txt
Assignment1/: CMakeLists.txt
Assignment1/source/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Population.cpp  Population.h  main.cpp
Assignment1/test/: CMakeLists.txt  GeneticAlgorithm_Test.cpp  Population_Test.cpp  random.cpp
Assignment2/: hw2.pl
